# aimlpy

./: README.md
aimlpy-main/aimlpy-main/: .env.example  .gitignore  README.md  frontend.py  pyproject.toml  requirements.txt  setup.py
aimlpy-main/aimlpy-main/aimlpy/: create_table.py  main.py  setting.py
aimlpy-main/aimlpy-main/aimlpy/api/: health_router.py  notes_router.py  recommendation_router.py
aimlpy-main/aimlpy-main/aimlpy/entity/: auth.py  auth_reqres.py  common.py  note.py  note_reqres.py  recommendation.py  recommendation_reqres.py  user.py  user_reqres.py
aimlpy-main/aimlpy-main/aimlpy/model/: model_base.py  note_record.py  recommendation_feedback_record.py  recommendation_history_record.py  user_record.py
aimlpy-main/aimlpy-main/aimlpy/repo/: datasource.py  note_repo.py  recommendation_feedback_repo.py  recommendation_history_repo.py  user_repo.py
aimlpy-main/aimlpy-main/aimlpy/service/: note_service.py  recommendation_service.py
aimlpy-main/aimlpy-main/aimlpy/util/: loggerutil.py  strutil.py  uuidutil.py
aimlpy-main/aimlpy-main/examples/: __init__.py
aimlpy-main/aimlpy-main/treeutil/: singleton.py
aimlpy-main/aimlpy-main/webapp/: api_config.py  app.py
