[tool.poetry]
name = "cacs456ml"
version = "1.0.0"
description = "CACS456 Machine Learning Project Demo"
authors = ["ashokpant <asokpant@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "2.2.5"
pandas = "2.0.3"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
